# MinusPod

./: .dockerignore  .env.example  .gitignore  .trivyignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.cpu  LICENSE  README.md  docker-compose.cpu.yml  docker-compose.openrouter.yml  docker-compose.whisper.yml  docker-compose.yml  entrypoint.sh  gunicorn.conf.py  openapi.yaml  requirements.in  requirements.txt  ruff.toml  version.py
benchmarks/cues/: .gitignore  README.md  pyproject.toml
benchmarks/cues/src/cuebench/: __init__.py  cli.py  cross_episode_eval.py  feeds.py  report.py  scan_eval.py  sweep.py  templates.py
benchmarks/cues/tests/: test_cross_episode_eval.py  test_scan_eval.py  test_sweep.py  test_templates.py
benchmarks/llm/: .env.example  .gitignore  CONTRIBUTING.md  README.md  benchmark.toml.example  pyproject.toml
benchmarks/llm/data/: README.md
benchmarks/llm/data/pricing_snapshots/: 20260509T225045_889333.json  20260520T181310_073288.json  20260520T195956_229629.json  20260602T233806_275985.json
benchmarks/llm/prompts/: 05-22-206.txt
benchmarks/llm/results/: report.md
benchmarks/llm/results/raw/: episode_results.jsonl
benchmarks/llm/scripts/: realign_truth.py
benchmarks/llm/src/benchmark/: __init__.py  auth.py  capture.py  cli.py  config.py  corpus.py  llm.py  metrics.py  (+7 more)
benchmarks/llm/tests/: conftest.py  test_capture.py  test_cli.py  test_config.py  test_corpus.py  test_metrics.py  test_migrate.py  test_pricing.py  test_prompt_source.py  test_report.py  test_runner.py  test_storage.py  test_tldr_ranking.py  test_truth_parser.py
(+17281 files in other folders)
