[project]
name = "minuspod-benchmark"
version = "0.1.0"
description = "Offline LLM ad-detection benchmark for MinusPod"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.39",
    "httpx>=0.27",
    "matplotlib>=3.9",
    "openai>=1.50",
    "python-dotenv>=1.0",
    "rapidfuzz>=3.10",
    "tomli>=2.0; python_version < '3.11'",
    "typer>=0.13",
]

[project.scripts]
benchmark = "benchmark.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/benchmark"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "../../src"]

[dependency-groups]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]
